Formulario de contacto Landing

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,7 +38,17 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
    crossorigin=""/>
+   
     <title>Drops | Street Shoes</title>
+
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init("user_iQ30OC1wzQq60J29vHHve");
+      })();
+    </script>
 
   </head>
   <body>
